[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "srtgo"
authors = [
    {name = "DKim", email = "lapis42@gmail.com"},
]
description = "SRTgo: K-Train Reservation Helper"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0.0,<9.0.0",
    "curl_cffi>=0.5.10,<1.0.0",
    "requests>=2.28.0,<3.0.0",
    "inquirer>=3.4.0,<4.0.0",
    "keyring>=23.0.0,<25.0.0",
    "PyCryptodome>=3.15.0,<4.0.0",
    "prompt_toolkit>=3.0.0,<4.0.0",
    "python-telegram-bot>=20.0.0,<22.0.0",
    "termcolor>=2.0.0,<3.0.0"
]
dynamic = ["version"]
[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/lapis42/srtgo"

[project.scripts]
srtgo = "srtgo.srtgo:srtgo"
